removing horizontal scroll and fixing image for phones

--- a/src/style.css
+++ b/src/style.css
@@ -192,9 +192,10 @@ h4 {
     font-size: 2vw;
   }
   .profilepic {
-/* margin:auto;
+    /* margin:auto;
     width: 100%; 
     max-width: 100%; 
     height: auto; */
-    object-fit: cover;  }
+    object-fit: cover;
+  }
 }
